Add object finder process_image

--- a/localization_expt.ipynb
+++ b/localization_expt.ipynb
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1115,7 @@
     "    def load_lora_ckpt_from_file(self, config_path, name):\n",
     "        ckpt = torch.load(config_path)\n",
     "        try:\n",
-    "\n",
+    "            self.ckpt_library[name] = ckpt\n",
     "            del self.lora_model\n",
     "            self.lora_model = self.get_peft_model(self.base_model,\n",
     "                                                ckpt[\"lora_config\"]).to(self.device)\n",
@@ -1132,12 +1132,12 @@
     "    def save_lora_ckpt(self):\n",
     "        pass\n",
     "\n",
-    "    # uses the current\n",
-    "    def encode_image(self, img):\n",
-    "        img = self.test_transforms(img)\n",
-    "        if len(img.shape) == 3:\n",
-    "            img = img.unsqueeze(0)    # if the image is unbatched, batch it\n",
-    "        emb = self.lora_model(img.to(self.device), output_hidden_states=True).last_hidden_state[0,0,:]\n",
+    "    # use the current lora_model to encode a batch of images\n",
+    "    def encode_image(self, imgs):\n",
+    "        img_batch = [self.test_transforms(i) for i in imgs]\n",
+    "        # if len(img.shape) == 3:\n",
+    "        #     img = img.unsqueeze(0)    # if the image is unbatched, batch it\n",
+    "        emb = self.lora_model(img_batch.to(self.device), output_hidden_states=True).last_hidden_state[:,0,:]\n",
     "        \n",
     "        return emb\n",
     "\n",
@@ -1345,7 +1345,7 @@
     "                )\n",
     "            return boxes_xyxy, masks\n",
     "\n",
-    "    # # use the saved model to return bounding boxes, masks and phrases\n",
+    "    # # use the saved model to return grounded images, bounding boxes, masks and phrases\n",
     "    def find(self, image_path=None, caption=None):\n",
     "        if type(image_path) == None:\n",
     "            raise NotImplementedError\n",
@@ -1367,8 +1367,11 @@
     "        #     annotated_frame = gd_annotate(image_source=image_source, boxes=boxes, logits=logits, phrases=phrases)\n",
     "        #     annotated_frame = annotated_frame[...,::-1] # BGR to RGB\n",
     "\n",
-    "        return boxes, masks, phrases\n",
+    "        # ground objects\n",
+    "        grounded_objects = [image_source[bb[1]:bb[3], bb[0]:bb[2], :] for bb in boxes]\n",
     "\n",
+    "        return grounded_objects, boxes, masks, phrases\n",
+    "    \n",
     "    # return a 3xN pointcloud corresponding to each object\n",
     "    def getDepth(depth_image_path, masks, f=300):\n",
     "        if depth_image_path == None:\n",
@@ -1723,11 +1726,21 @@
     "Bundles together object information for distinct objects\n",
     "\"\"\"\n",
     "class ObjectInfo:\n",
-    "    def __init__(self, name):\n",
-    "        self.name = name\n",
-    "        self.embeddings = []\n",
-    "        self.pcd = np.empty_like(0,3)\n",
+    "    def __init__(self, id, name, emb, pcd):\n",
+    "        self.id = id\n",
+    "        self.names = [name]\n",
+    "        self.embeddings = [emb]\n",
+    "        self.pcd = pcd\n",
     "        # self.centroid = np.empty(3, np.float64)\n",
+    "\n",
+    "    def addInfo(self, name, embedding, pcd):\n",
+    "        if name not in self.names:\n",
+    "            self.names.append(name)\n",
+    "        self.embeddings.append(embedding)\n",
+    "        self.pcd = torch.tile([self.pcd, pcd], axis=-1)\n",
+    "\n",
+    "    def __repr__():\n",
+    "        print(\"ID: %d | Names: [%s] |  Num embs: %s | Pcd size\")\n",
     "\n",
     "# main object recorder class\n",
     "\n",
@@ -1736,10 +1749,14 @@
     "\n",
     "\"\"\"\n",
     "class ObjectMemory:\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, lora_path=None):\n",
     "        self.objectFinder = ObjectFinder()\n",
     "        self.loraModule = LoraRevolver()\n",
     "\n",
+    "        if lora_path != None:\n",
+    "            self.loraModule.load_lora_ckpt_from_file(lora_path)\n",
+    "\n",
+    "        self.num_objects_stored = 0\n",
     "        self.memory = {\n",
     "            # store ObjectInfo classes here\n",
     "        }\n",
@@ -1747,30 +1764,51 @@
     "        pass\n",
     "\n",
     "    \"\"\"\n",
-    "     takes in an rgb-d image and associated pose, detects all objects present\n",
+    "     takes in an rgb-d image and associated pose, detects all objects present, stores into memory\n",
     "    \"\"\"\n",
-    "    def process_image(self, image_path=None, pose=None):\n",
+    "    def process_image(self, image_path=None, pose=None, bounding_box_threshold=0.3):\n",
     "        if image_path == None:\n",
     "            raise NotImplementedError\n",
     "        \n",
     "        else:\n",
-    "            # segment objects, get tuples of (bounding boxes, segmentation mask and label) per box\n",
-    "            obj_bounding_boxes, obj_masks, obj_phrases = self.objectFinder.find(image_path)\n",
-    "    \n",
+    "            # segment objects, get (grounded_image bounding boxes, segmentation mask and label) per box\n",
+    "            obj_grounded_imgs, obj_bounding_boxes, obj_masks, obj_phrases = self.objectFinder.find(image_path)\n",
+    "            \n",
+    "            # get ViT+LoRA embeddings, use bounding boxes and the image to get grounded images\n",
+    "            embs = self.loraModule.encode_image(obj_grounded_imgs)\n",
+    "\n",
     "            obj_pointclouds = self.objectFinder.getDepth(obj_masks)\n",
     "            transformed_pointclouds = [transform_pcd_to_global_frame(pcd, pose) for pcd in obj_pointclouds]\n",
     "\n",
-    "            # for each tuple, consult already stored memory, match tuples to stored memory\n",
-    "                # TODO deal with multiple instances of objects in the same category\n",
-    "                # grouping based on \"phrase\" for now\n",
+    "            # check that all info recovered\n",
+    "            assert(len(obj_grounded_imgs) == len(obj_bounding_boxes) \\\n",
+    "                   and len(obj_bounding_boxes) == len(obj_masks) \\\n",
+    "                   and len(obj_masks) == len(obj_phrases) \\\n",
+    "                   and len(embs) == len(obj_phrases))\n",
+    "\n",
+    "            # for each tuple, consult already stored memory, match tuples to stored memory (based on 3d IoU)\n",
+    "                # TODO optimise and batch, fetch all memory bounding boxes once\n",
+    "                # remove double loop\n",
+    "            \n",
+    "            for obj_phrase, emb, q_pcd in zip(obj_phrases, embs, transformed_pointclouds):\n",
+    "                for instance_id, info in self.memory:\n",
+    "                    object_pcd = info.pcd\n",
+    "                    IoU3d = calculate_3d_IoU(q_pcd, object_pcd)\n",
+    "\n",
+    "                    # if the iou is above the threshold, consider it to be the same object\n",
+    "                    if IoU3d > bounding_box_threshold:\n",
+    "                        instance_id.addInfo(obj_phrase ,emb, q_pcd)\n",
+    "                    else:   # new object detected\n",
+    "                        new_obj_info = ObjectInfo(self.num_objects_stored,\n",
+    "                                                  obj_phrase,\n",
+    "                                                  emb,\n",
+    "                                                  q_pcd)\n",
+    "                        \n",
+    "                        self.memory[self.num_objects_stored] = new_obj_info\n",
+    "                        self.num_objects_stored += 1\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "            # accumulate tuples into memory\n",
-    "\n",
-    "            pass"
+    "\n"
    ]
   }
  ],
