--- a/localization_expt.ipynb
+++ b/localization_expt.ipynb
@@ -1739,8 +1739,9 @@
     "        self.embeddings.append(embedding)\n",
     "        self.pcd = torch.tile([self.pcd, pcd], axis=-1)\n",
     "\n",
-    "    def __repr__():\n",
-    "        print(\"ID: %d | Names: [%s] |  Num embs: %s | Pcd size\")\n",
+    "    def __repr__(self):\n",
+    "        return f\"ID: %d | Names: [%s] |  Num embs: %d | Pcd size: \" % \\\n",
+    "              (self.id, \" \".join(self.names), len(self.embeddings)) + str(self.pcd.shape)\n",
     "\n",
     "# main object recorder class\n",
     "\n",
@@ -1762,6 +1763,11 @@
     "        }\n",
     "\n",
     "        pass\n",
+    "\n",
+    "    # visualisation and utility\n",
+    "    def view_memory(self):\n",
+    "        for _, info in self.memory:\n",
+    "            print(info)\n",
     "\n",
     "    \"\"\"\n",
     "     takes in an rgb-d image and associated pose, detects all objects present, stores into memory\n",
